k8s/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        # Sử dụng Image siêu nhẹ mà bạn đã đúc
        image: alphazero-registry:5000/custom-mlflow:v1
        imagePullPolicy: IfNotPresent # Lấp lỗi, sau này sửa lại thành Always
        args:
        - mlflow
        - server
        - --host=0.0.0.0
        - --port=5000
        # Gọi biến môi trường DB_URI ra để kết nối an toàn
        - --backend-store-uri=$(DB_URI)
        # Khai báo nơi chứa các file mô hình huấn luyện
        - --default-artifact-root=s3://mlflow-artifacts
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  type: NodePort
  selector:
    app: mlflow
  ports:
  - port: 5000
    targetPort: 5000
    # Cổng NodePort để bạn xem giao diện trên trình duyệt (http://localhost:30500)
    nodePort: 30500
